[package]
name = "gas-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
rand = "0.8.5"
rand_distr = "0.4.3"
bevy_egui = "0.25.0"
# bevy_rapier2d =  "0.25.0" leave this for later